FIX #3 closed 데이터저장, 불러오기 방식 변경 + SCSS 수정

--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles.scss"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
@@ -79,8 +84,13 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles.scss"
+              ]
+            },
             "scripts": [],
             "assets": [
               "src/favicon.ico",
