--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@angular/platform-browser": "^7.0.3",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ngrx/effects": "^6.1.2",
+    "@ngrx/router-store": "^6.1.2",
+    "@ngrx/schematics": "^6.1.2",
+    "@ngrx/store": "^6.1.2",
+    "@ngrx/store-devtools": "^6.1.2",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
     "rxjs": "~6.3.3",
